# pct_course_project

./: CMakeLists.txt  README.md
parallel/src/: CMakeLists.txt  jacobi.h  jacobi_parallel.c  main.c
serial/src/: CMakeLists.txt  jacobi.c  jacobi.h  main.c
